# symulacja_dobro_zlo

./: .gitignore  main.py  pyproject.toml
automaty_komorkowe_2/: README.md  main.py  report.md
chaotycznosc_generacji_jezykowej/: main.ipynb  report.md
lab4_node/: neural_ode_replicator.ipynb  sprawko.md
supermodeling/: main.py  raport.md  visualization.py
supermodeling/models/: __init__.py  data_assimilation.py  lotka_volterra.py  supermodel.py
supermodeling/report/: main.tex
symulowanie_dobra_i_zła/: main.html  main.ipynb  project.md
