[project]
name = "infromatyka-systemow-zlozonych"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "torchdiffeq>=0.2.3",
    "scikit-learn>=1.3.0",
]
